Add LangchainCheckpoint DB to postgres init db

--- a/postgresql-initdb.yml
+++ b/postgresql-initdb.yml
@@ -1101,3 +1101,189 @@ data:
     --
     -- PostgreSQL database dump complete
     --
+  LangchainCheckpoint.sql: |+
+    --
+    -- PostgreSQL database dump
+    --
+
+    -- Dumped from database version 17.4 (Debian 17.4-1.pgdg120+2)
+    -- Dumped by pg_dump version 17.4 (Debian 17.4-1.pgdg120+2)
+
+    SET statement_timeout = 0;
+    SET lock_timeout = 0;
+    SET idle_in_transaction_session_timeout = 0;
+    SET transaction_timeout = 0;
+    SET client_encoding = 'UTF8';
+    SET standard_conforming_strings = on;
+    SELECT pg_catalog.set_config('search_path', '', false);
+    SET check_function_bodies = false;
+    SET xmloption = content;
+    SET client_min_messages = warning;
+    SET row_security = off;
+
+    SET default_tablespace = '';
+
+    SET default_table_access_method = heap;
+
+    --
+    -- Name: checkpoint_blobs; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.checkpoint_blobs (
+        thread_id text NOT NULL,
+        checkpoint_ns text DEFAULT ''::text NOT NULL,
+        channel text NOT NULL,
+        version text NOT NULL,
+        type text NOT NULL,
+        blob bytea
+    );
+
+
+    ALTER TABLE public.checkpoint_blobs OWNER TO guest;
+
+    --
+    -- Name: checkpoint_migrations; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.checkpoint_migrations (
+        v integer NOT NULL
+    );
+
+
+    ALTER TABLE public.checkpoint_migrations OWNER TO guest;
+
+    --
+    -- Name: checkpoint_writes; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.checkpoint_writes (
+        thread_id text NOT NULL,
+        checkpoint_ns text DEFAULT ''::text NOT NULL,
+        checkpoint_id text NOT NULL,
+        task_id text NOT NULL,
+        idx integer NOT NULL,
+        channel text NOT NULL,
+        type text,
+        blob bytea NOT NULL,
+        task_path text DEFAULT ''::text NOT NULL
+    );
+
+
+    ALTER TABLE public.checkpoint_writes OWNER TO guest;
+
+    --
+    -- Name: checkpoints; Type: TABLE; Schema: public; Owner: guest
+    --
+
+    CREATE TABLE public.checkpoints (
+        thread_id text NOT NULL,
+        checkpoint_ns text DEFAULT ''::text NOT NULL,
+        checkpoint_id text NOT NULL,
+        parent_checkpoint_id text,
+        type text,
+        checkpoint jsonb NOT NULL,
+        metadata jsonb DEFAULT '{}'::jsonb NOT NULL
+    );
+
+
+    ALTER TABLE public.checkpoints OWNER TO guest;
+
+    --
+    -- Data for Name: checkpoint_blobs; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.checkpoint_blobs (thread_id, checkpoint_ns, channel, version, type, blob) FROM stdin;
+    \.
+
+
+    --
+    -- Data for Name: checkpoint_migrations; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.checkpoint_migrations (v) FROM stdin;
+    0
+    1
+    2
+    3
+    4
+    5
+    6
+    7
+    8
+    9
+    \.
+
+
+    --
+    -- Data for Name: checkpoint_writes; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.checkpoint_writes (thread_id, checkpoint_ns, checkpoint_id, task_id, idx, channel, type, blob, task_path) FROM stdin;
+    \.
+
+
+    --
+    -- Data for Name: checkpoints; Type: TABLE DATA; Schema: public; Owner: guest
+    --
+
+    COPY public.checkpoints (thread_id, checkpoint_ns, checkpoint_id, parent_checkpoint_id, type, checkpoint, metadata) FROM stdin;
+    \.
+
+
+    --
+    -- Name: checkpoint_blobs checkpoint_blobs_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.checkpoint_blobs
+        ADD CONSTRAINT checkpoint_blobs_pkey PRIMARY KEY (thread_id, checkpoint_ns, channel, version);
+
+
+    --
+    -- Name: checkpoint_migrations checkpoint_migrations_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.checkpoint_migrations
+        ADD CONSTRAINT checkpoint_migrations_pkey PRIMARY KEY (v);
+
+
+    --
+    -- Name: checkpoint_writes checkpoint_writes_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.checkpoint_writes
+        ADD CONSTRAINT checkpoint_writes_pkey PRIMARY KEY (thread_id, checkpoint_ns, checkpoint_id, task_id, idx);
+
+
+    --
+    -- Name: checkpoints checkpoints_pkey; Type: CONSTRAINT; Schema: public; Owner: guest
+    --
+
+    ALTER TABLE ONLY public.checkpoints
+        ADD CONSTRAINT checkpoints_pkey PRIMARY KEY (thread_id, checkpoint_ns, checkpoint_id);
+
+
+    --
+    -- Name: checkpoint_blobs_thread_id_idx; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX checkpoint_blobs_thread_id_idx ON public.checkpoint_blobs USING btree (thread_id);
+
+
+    --
+    -- Name: checkpoint_writes_thread_id_idx; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX checkpoint_writes_thread_id_idx ON public.checkpoint_writes USING btree (thread_id);
+
+
+    --
+    -- Name: checkpoints_thread_id_idx; Type: INDEX; Schema: public; Owner: guest
+    --
+
+    CREATE INDEX checkpoints_thread_id_idx ON public.checkpoints USING btree (thread_id);
+
+
+    --
+    -- PostgreSQL database dump complete
+    --
+
