--- a/hypercorn_config.yml
+++ b/hypercorn_config.yml
@@ -7,7 +7,7 @@ data:
     accesslog = "/var/log/hypercorn/access.log"
     errorlog = "/var/log/hypercorn/errors.log"
     loglevel = "DEBUG"
-    alt_svc_headers = ["h3=\":4433\"; ma=3600, h3-34=\":4433\"; ma=3600"]
+    alt_svc_headers = ["h3=\":443\"; ma=86400"]
     bind = ["0.0.0.0:443"]
     quic_bind = ["0.0.0.0:443"]
     insecure_bind = ["0.0.0.0:80"]
