--- a/svc-ragagent.yml
+++ b/svc-ragagent.yml
@@ -9,6 +9,10 @@ metadata:
     app: ragagent
 spec:
   ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: http
     - name: https-tcp
       protocol: TCP
       port: 4433
