Remove obsolete POSTGRESQL_PASSWORD

--- a/nodejsrestapi.yml
+++ b/nodejsrestapi.yml
@@ -45,7 +45,7 @@ spec:
                 secretKeyRef:
                   name: postgresql-secret
                   key: postgresql-user
-            - name: POSTGRESQL_PASSWORD
+            - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: postgresql-secret
