--- a/hypercorn_config.yml
+++ b/hypercorn_config.yml
@@ -6,13 +6,10 @@ data:
   hypercorn.toml: |
     accesslog = "/var/log/hypercorn/access.log"
     errorlog = "/var/log/hypercorn/errors.log"
-    loglevel = "DEBUG"
+    loglevel = "DEBUG" 
     alt_svc_headers = ["h3=\":443\"; ma=86400"]
-    bind = ["0.0.0.0:443"]
-    quic_bind = ["0.0.0.0:443"]
-    insecure_bind = ["0.0.0.0:80"]
+    quic_bind = ["0.0.0.0:443", "[::]:443"]
     certfile = "/tmp/server.crt"
     keyfile = "/tmp/server.key"
     server_names = ["hypercorn"]
-    worker_class = "asyncio"
-    workers = 100
+    worker_class = "trio"
