--- a/neo4j_config.yml
+++ b/neo4j_config.yml
@@ -21,6 +21,6 @@ data:
   # Use more reliable defaults SSL / TLS settings for K8s
   dbms.ssl.policy.bolt.client_auth: "NONE"
   dbms.ssl.policy.https.client_auth: "NONE"
-  server.bolt.tls_level: "REQUIRED"
-  server.https.enabled: "true"
+  #server.bolt.tls_level: "REQUIRED"
+  server.https.enabled: "false"
   server.default_listen_address: "0.0.0.0"
