--- a/postgresql-secret.yml
+++ b/postgresql-secret.yml
@@ -1,8 +1,11 @@
 apiVersion: v1
 kind: Secret
+type: Opaque
 metadata:
   name: postgresql-secret
-type: Opaque
+  labels:
+    app: db-postgresql
+    component: postgresql
 data:
   postgresql-user: Z3Vlc3Q=
   postgresql-password: UEAkJHcwcmQ=
