--- a/ElasticSearchKibana/elastic_eck_snapshots_secret.yml
+++ b/ElasticSearchKibana/elastic_eck_snapshots_secret.yml
@@ -5,5 +5,5 @@ metadata:
   name: elastic-eck-snapshots
   namespace: default
 data:
-  access-key-id: ACCESS_KEY_ID
-  access-secret-key: ACCESS_SECRET_KEY
+  access-key-id: QUNDRVNTX0tFWV9JRA==
+  access-secret-key: QUNDRVNTX1NFQ1JFVF9LRVk=
