--- a/ElasticSearchKibana/apmserver.yml
+++ b/ElasticSearchKibana/apmserver.yml
@@ -6,14 +6,14 @@ metadata:
     app: apmserver
     component: eck
 spec:
-  version: 8.11.3
+  version: 8.17.3
   count: 3
   secureSettings:
-    - secretName: <name>-es-elastic-user
+    - secretName: khteh-es-elastic-user
   config:
     output:
       elasticsearch:
-        hosts: ["https://<name>-es-internal-http.default:9200"]
+        hosts: ["https://khteh-es-internal-http.default:9200"]
         username: elastic
         password: "${elastic}"
         protocol: "https"
