Fix storage class and secret namespace

--- a/ElasticSearchKibana/elastic_eck_snapshots_secret.yml
+++ b/ElasticSearchKibana/elastic_eck_snapshots_secret.yml
@@ -3,7 +3,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: elastic-eck-snapshots
-  namespace: default
+  namespace: elastic-system
 data:
   access-key-id: QUNDRVNTX0tFWV9JRA==
   access-secret-key: QUNDRVNTX1NFQ1JFVF9LRVk=
