--- a/ElasticSearchKibana/apmserver.yml
+++ b/ElasticSearchKibana/apmserver.yml
@@ -1,7 +1,7 @@
 apiVersion: apm.k8s.elastic.co/v1
 kind: ApmServer
 metadata:
-  name: MyAPMServer
+  name: khteh-apm
   labels:
     app: apmserver
     component: eck
