--- a/Neo4J/neo4j.yml
+++ b/Neo4J/neo4j.yml
@@ -22,7 +22,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: neo4j
-          image: khteh/neo4j:latest
+          image: neo4j:latest
           imagePullPolicy: Always
           env:
             - name: NEO4J_AUTH
@@ -56,10 +56,10 @@ spec:
           volumeMounts:
             - name: neo4j-conf
               mountPath: /config/neo4j.conf
-            - name: healthcare-neo4j
-              mountPath: /import/neo4j.dump
-              subPath: neo4j.dump
-              readOnly: false
+            #- name: healthcare-neo4j
+            #  mountPath: /import/neo4j.dump
+            #  subPath: neo4j.dump
+            #  readOnly: false
             - name: neo4j-persistent-storage
               mountPath: /data
               readOnly: false
@@ -72,9 +72,9 @@ spec:
             sources:
               - configMap:
                   name: neo4j-config
-        - name: healthcare-neo4j
-          configMap:
-            name: healthcare-neo4j
+        #- name: healthcare-neo4j
+        #  configMap:
+        #    name: healthcare-neo4j
         - name: log
           emptyDir: {}
   volumeClaimTemplates:
