--- a/ElasticSearchKibana/elasticsearch_eck.yml
+++ b/ElasticSearchKibana/elasticsearch_eck.yml
@@ -4,6 +4,7 @@ metadata:
   name: khteh-es
   labels:
     app: elasticsearch
+    component: elasticsearch-kibana
 spec:
   version: 8.17.3 #https://www.elastic.co/guide/en/elasticsearch/reference/current/es-release-notes.html
   auth:
@@ -45,16 +46,16 @@ spec:
                 - |
                   echo $AWS_ACCESS_KEY_ID | bin/elasticsearch-keystore add --stdin --force s3.client.default.access_key
                   echo $AWS_SECRET_ACCESS_KEY | bin/elasticsearch-keystore add --stdin --force s3.client.default.secret_key
-          #affinity:
-          #  podAntiAffinity:
-          #    requiredDuringSchedulingIgnoredDuringExecution:
-          #      - labelSelector:
-          #          matchExpressions:
-          #            - key: elasticsearch.k8s.elastic.co/statefulset-name
-          #              operator: In
-          #              values:
-          #                - khteh-es-master
-          #        topologyKey: kubernetes.io/hostname
+          affinity:
+            podAntiAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                - labelSelector:
+                    matchExpressions:
+                      - key: elasticsearch.k8s.elastic.co/statefulset-name
+                        operator: In
+                        values:
+                          - khteh-es-master
+                  topologyKey: kubernetes.io/hostname
           containers:
             - name: elasticsearch
               readinessProbe:
@@ -79,6 +80,7 @@ spec:
             name: elasticsearch-data
             labels:
               app: elasticsearch
+              component: elasticsearch-kibana
           spec:
             accessModes:
               - ReadWriteOnce
@@ -145,6 +147,7 @@ spec:
             name: elasticsearch-data
             labels:
               app: elasticsearch
+              component: elasticsearch-kibana
           spec:
             accessModes:
               - ReadWriteOnce
