Move Python RAG Agent to it's own folder

--- a/RAG-Agent/ragagent.yml
+++ b/RAG-Agent/ragagent.yml
@@ -92,7 +92,7 @@ spec:
             failureThreshold: 3
             successThreshold: 1
           volumeMounts:
-            - name: rag-agent-secret
+            - name: ragagent-secret
               mountPath: /app/.env
               subPath: .env
               readOnly: true
@@ -138,9 +138,9 @@ spec:
               cpu: 500m
               memory: 2Gi
       volumes:
-        - name: rag-agent-secret
+        - name: ragagent-secret
           secret:
-            secretName: rag-agent-secret
+            secretName: ragagent-secret
             items:
               - key: .env
                 path: .env
