--- a/Neo4J/neo4j_config.yml
+++ b/Neo4J/neo4j_config.yml
@@ -23,15 +23,17 @@ data:
   dbms.ssl.policy.https.client_auth: "NONE"
   dbms.security.allow_csv_import_from_file_urls: "true"
   dbms.databases.default_to_read_only: "false"
+  dbms.security.procedures.unrestricted: "gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*"
+  dbms.security.procedures.allowlist: "gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*"
+  dbms.security.http_auth_allowlist: "gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*"
   #server.bolt.tls_level: "REQUIRED"
   server.https.enabled: "false"
   server.default_listen_address: "0.0.0.0"
   # Paths of directories in the installation.
   server.directories.data: "data"
-  #server.directories.plugins=plugins
+  server.directories.plugins: "plugins"
   server.directories.logs: "/var/log/neo4j"
-  #server.directories.lib=lib
-  #server.directories.run=run
+  server.directories.lib: "lib"
+  server.directories.run: "run"
   #server.directories.licenses=licenses
   server.directories.transaction.logs.root: "/var/log/neo4j/transactions"
-
