--- a/RAG-Agent/ragagent_config.yml
+++ b/RAG-Agent/ragagent_config.yml
@@ -13,6 +13,7 @@ data:
         "SQLALCHEMY_TRACK_MODIFICATIONS": false,
         "DB_HOST": "svc-postgresql",
         "DB_MAX_CONNECTIONS": 10,
+        "NEO4J_URI": "neo4j://svc-neo4j:7687",
         "HEALTHZ": {
                     "live": "src.app.liveness",
                     "ready": "src.app.readiness"
