--- a/PythonRestAPI/hypercorn_config.yml
+++ b/PythonRestAPI/hypercorn_config.yml
@@ -11,5 +11,5 @@ data:
     quic_bind = ["0.0.0.0:443", "[::]:443"]
     certfile = "/tmp/server.crt"
     keyfile = "/tmp/server.key"
-    server_names = ["hypercorn"]
+    server_names = ["khteh.com"]
     worker_class = "trio"
