Update hypercorn and app config. Fix probes by adding httpheader

--- a/PythonRestAPI/pythonrestapi.yml
+++ b/PythonRestAPI/pythonrestapi.yml
@@ -55,32 +55,26 @@ spec:
               name: https-tcp
               protocol: TCP
           readinessProbe:
-            exec:
-              command:
-                - curl
-                - -v
-                #- --insecure
-                - http://localhost/healthz/ready
-            #httpGet:
-            #  path: /healthz/ready
-            #  port: http
-            #  scheme: HTTP
+            httpGet:
+              path: /health/ready
+              port: https-udp
+              scheme: HTTPS
+              httpHeaders:
+                - name: Host
+                  value: khteh.com
             initialDelaySeconds: 20
             periodSeconds: 5
             timeoutSeconds: 10
             failureThreshold: 3
             successThreshold: 1
           livenessProbe:
-            exec:
-              command:
-                - curl
-                - -v
-                #    - --insecure
-                - http://localhost/healthz/live
-            #httpGet:
-            #  path: /healthz/live
-            #  port: http
-            #  scheme: HTTP
+            httpGet:
+              path: /health/live
+              port: https-udp
+              scheme: HTTPS
+              httpHeaders:
+                - name: Host
+                  value: khteh.com
             initialDelaySeconds: 20
             periodSeconds: 5
             timeoutSeconds: 10
