--- a/RAG-Agent/hypercorn_config.yml
+++ b/RAG-Agent/hypercorn_config.yml
@@ -6,10 +6,13 @@ data:
   hypercorn.toml: |
     accesslog = "/var/log/hypercorn/access.log"
     errorlog = "/var/log/hypercorn/errors.log"
-    loglevel = "DEBUG" 
-    alt_svc_headers = ["h3=\":443\"; ma=86400"]
+    loglevel = "DEBUG"
+    alt_svc_headers = ["h3=\":443\"; ma=2592000"]
+    bind = "0.0.0.0:443"
     quic_bind = ["0.0.0.0:443", "[::]:443"]
+    insecure_bind = "0.0.0.0:8080"
     certfile = "/tmp/server.crt"
     keyfile = "/tmp/server.key"
     server_names = ["khteh.com"]
-    worker_class = "trio"
+    worker_class = "asyncio"
+    #workers = 100
