--- a/RAG-Agent/hypercorn_config.yml
+++ b/RAG-Agent/hypercorn_config.yml
@@ -13,6 +13,6 @@ data:
     insecure_bind = "0.0.0.0:8080"
     certfile = "/tmp/server.crt"
     keyfile = "/tmp/server.key"
-    server_names = ["khteh.com"]
+    server_names = []
     worker_class = "asyncio"
     #workers = 100
