--- a/Neo4J/neo4j_config.yml
+++ b/Neo4J/neo4j_config.yml
@@ -6,33 +6,36 @@ metadata:
     app: db-neo4j
     component: neo4j
 data:
-  # Bolt keep alive
-  # this helps to ensure that LoadBalancers do not close bolt connections that are in use but appear idle
-  server.bolt.connection_keep_alive: "30s"
-  server.bolt.connection_keep_alive_for_requests: "ALL"
-  server.bolt.connection_keep_alive_streaming_scheduling_interval: "30s"
-  # Other
-  internal.dbms.ssl.system.ignore_dot_files: "true"
-  # Import - Only works by copying the files to be imported into the pod in this folder, then run the import externally using GraphDatabase.driver
-  server.directories.import: "/import"
-  # Metrics
-  server.directories.metrics: "/metrics"
-  #server.bolt.tls_level: "REQUIRED"
-  server.https.enabled: "false"
-  server.default_listen_address: "0.0.0.0"
-  # Paths of directories in the installation.
-  server.directories.data: "data"
-  server.directories.plugins: "plugins"
-  server.directories.logs: "/var/log/neo4j"
-  server.directories.lib: "lib"
-  server.directories.run: "run"
-  #server.directories.licenses=licenses
-  server.directories.transaction.logs.root: "/var/log/neo4j/transactions"
-  # Use more reliable defaults SSL / TLS settings for K8s
-  dbms.ssl.policy.bolt.client_auth: "NONE"
-  dbms.ssl.policy.https.client_auth: "NONE"
-  dbms.security.allow_csv_import_from_file_urls: "true"
-  dbms.databases.default_to_read_only: "false"
-  dbms.security.procedures.unrestricted: "apoc.*"
-  dbms.security.procedures.allowlist: "apoc.*"
-  dbms.security.http_auth_allowlist: "apoc.*"
+  neo4j.conf: |
+    # Bolt keep alive
+    # this helps to ensure that LoadBalancers do not close bolt connections that are in use but appear idle
+    server.bolt.enabled = true
+    server.http.enabled = true
+    server.https.enabled = false
+    server.bolt.connection_keep_alive = 30
+    server.bolt.connection_keep_alive_for_requests = ALL
+    server.bolt.connection_keep_alive_streaming_scheduling_interval = 30
+    # Other
+    internal.dbms.ssl.system.ignore_dot_files = true
+    # Import - Only works by copying the files to be imported into the pod in this folder, then run the import externally using GraphDatabase.driver
+    server.directories.import = import
+    # Metrics
+    #server.directories.metrics = /metrics
+    #server.bolt.tls_level: REQUIRED
+    server.default_listen_address = 0.0.0.0
+    # Paths of directories in the installation.
+    server.directories.data = /data
+    #server.directories.plugins = plugins
+    server.directories.logs = /var/log/neo4j
+    server.directories.lib = lib
+    server.directories.run = run
+    #server.directories.licenses=licenses
+    server.directories.transaction.logs.root = /var/log/neo4j/transactions
+    server.databases.default_to_read_only = false
+    # Use more reliable defaults SSL / TLS settings for K8s
+    dbms.ssl.policy.bolt.client_auth = NONE
+    dbms.ssl.policy.https.client_auth = NONE
+    dbms.security.allow_csv_import_from_file_urls = true
+    dbms.security.procedures.unrestricted = gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*
+    dbms.security.procedures.allowlist = gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*
+    dbms.security.http_auth_allowlist = gds.*,algo.*,apoc.*,apoc.trigger.*,apoc.meta.*,apoc.meta.data.*
